manifests/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: my-basic-auth
spec:
  basicAuth:
    secret: my-basic-auth-secret
