manifests/basic-auth-registry-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: registry-basic-auth
spec:
  basicAuth:
    secret: registry-basic-auth-secret
