manifests/middleware-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: my-basic-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: my-basic-auth-secret
