manifests/ws-besu-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ws-besu-ingress
  namespace: paladin
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-certmanager"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    secretName: ws-besu-tls   # Secret gerado pelo cert-manager para esse host
  routes:
    - match: Host(`ws-besu.cluster.eita.cloud`)
      kind: Rule
      services:
        - name: besu-node1
          port: 8546
        - name: besu-node2
          port: 8546
        - name: besu-node3
          port: 8546
